# ptk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: ButtonExample.cpp  CMakeLists.txt  LabelExample.cpp  RectangleExample.cpp  example.cpp  rectangle_example.cpp
example/box_layout/: BoxLayoutExample.cpp  CMakeLists.txt
example/image/: CMakeLists.txt  ImageExample.cpp
include/ptk/: Application.hpp  Core.hpp  Log.hpp  Window.hpp  application.hpp  eventhandler.hpp  eventhandling.hpp  log.hpp  ptk.hpp  window.hpp
include/ptk/core/: Alignment.hpp  ApplicationBase.hpp  BaseWindow.hpp  Box.hpp  CallbackStorage.hpp  Canvas.hpp  CanvasBase.hpp  CommandBuffer.hpp  Container.hpp  ContextBase.hpp  Defines.hpp  Drawable.hpp  Event.hpp  EventCallbacks.hpp  EventFunctions.hpp  EventHandling.hpp  EventManager.hpp  EventQueue.hpp  Exception.hpp  Font.hpp  ImmutableBuffer.hpp  Shape.hpp  Sizable.hpp  Text.hpp  Types.hpp  Widget.hpp  WidgetContainer.hpp  WidgetInterface.hpp  WindowBackend.hpp  WindowBase.hpp  WindowInfo.hpp  canvas.hpp  container.hpp  drawable.hpp  event.hpp  event_callbacks.hpp  event_functions.hpp  event_handler.hpp  event_handling.hpp  eventhandling.hpp  (+3 more)
include/ptk/events/: KeyCodes.hpp  KeyEvent.hpp  KeyMap.hpp  MouseEvent.hpp  WidgetEvents.hpp  WindowEvent.hpp  key_event.hpp  keyevent.hpp  mouse_event.hpp  mouseevent.hpp  (+2 more)
sandbox/: CMakeLists.txt  SandboxApp.cpp
src/: Application.cpp  CMakeLists.txt  Log.cpp  Log.hpp  Window.cpp  application.cpp  window.cpp
src/core/: Alignment.cpp  ApplicationBase.cpp  Assert.hpp  BaseWindow.cpp  Box.cpp  CallbackStorage.cpp  Canvas.cpp  CanvasBase.cpp  Container.cpp  ContextBase.cpp  EventCallbacks.cpp  EventHandling.cpp  EventManager.cpp  Font.cpp  ImmutableBuffer.cpp  PointerOverlapDefine.hpp  Shape.cpp  Sizable.cpp  Text.cpp  Widget.cpp  WidgetContainer.cpp  WindowBase.cpp  canvas.cpp  container.cpp  event_callbacks.cpp  event_handler.cpp  event_handling.cpp  shape.cpp  transformable.cpp  widget.cpp
src/core/platform/: ApplicationBase.cpp  ContextBase.cpp
src/events/: KeyMap.cpp
src/include/: Assert.hpp  Log.hpp  PointerOverlapDefine.hpp
src/menu/: CheckboxMenuItem.cpp  Menu.cpp  MenuBar.cpp  MenuItem.cpp  NamedMenuItem.cpp
src/platform/: ApplicationHandle.cpp  Backend.hpp  CMakeLists.txt  ContextFactory.cpp  GLCanvas.cpp  GLContext.cpp  KeyMapFactory.cpp  KeyMapFactory.hpp  KeyMapInit.cpp  KeyMapInit.hpp  Platform.cpp  Platform.hpp  PlatformInit.cpp  PlatformInit.hpp  RasterContext.cpp  Window.cpp  WindowHandle.cpp
src/platform/base/: ApplicationHandle.cpp  ContextBase.cpp  ContextFactory.cpp  WindowHandle.cpp
src/platform/common/: RasterContext.cpp  RasterContext.hpp
src/platform/glfw/: GLContext.cpp  GLContext.hpp  GLContext_glfw.cpp  GLContext_glfw.hpp  GLFWBackend.cpp  GLFWBackend.hpp  MainWindow_glfw.cpp  MainWindow_glfw.hpp
src/platform/mac/: ApplicationHandleMac.hpp  ApplicationHandleMac.mm  ApplicationHandle_mac.hpp  ApplicationHandle_mac.mm  Application_mac.hpp  Application_mac.mm  ContextFactoryMac.mm  ContextFactory_mac.mm  KeyMapMac.cpp  KeyMap_mac.cpp  KeyMap_mac.hpp  MainWindow_mac.hpp  MainWindow_mac.mm  MetalContextMac.hpp  MetalContextMac.mm  MetalContext_mac.h  MetalContext_mac.hpp  MetalContext_mac.mm  RasterContextMac.hpp  RasterContextMac.mm  RasterContext_mac.hpp  RasterContext_mac.mm  RasterPolicy_mac.hpp  RasterPolicy_mac.mm  UtilityMac.hpp  Utility_mac.hpp  WindowHandleMac.hpp  WindowHandleMac.mm  WindowHandle_mac.hpp  WindowHandle_mac.mm
src/platform/unix/: ApplicationHandleUnix.cpp  ApplicationHandleUnix.hpp  ApplicationHandle_unix.cpp  ApplicationHandle_unix.hpp  Application_unix.cpp  Application_unix.hpp  ContextFactoryUnix.cpp  ContextFactory_unix.cpp  GLContextUnix.cpp  GLContextUnix.hpp  GLContext_unix.cpp  GLContext_unix.hpp  KeyMapUnix.cpp  KeyMap_unix.cpp  KeyMap_unix.hpp  MainWindow_unix.cpp  MainWindow_unix.hpp  RasterContextUnix.cpp  RasterContextUnix.hpp  RasterContext_unix.cpp  RasterContext_unix.hpp  RasterPolicy_unix.cpp  RasterPolicy_unix.hpp  WindowHandleUnix.cpp  WindowHandleUnix.hpp  WindowHandle_unix.cpp  WindowHandle_unix.hpp  x11.hpp
src/platform/win/: ApplicationHandleWin.cpp  ApplicationHandleWin.hpp  ApplicationHandle_win.cpp  ApplicationHandle_win.hpp  Application_win.cpp  Application_win.hpp  ContextFactoryWin.cpp  ContextFactory_win.cpp  GLContextWin.cpp  GLContextWin.hpp  GLContext_win.cpp  GLContext_win.hpp  KeyMapWin.cpp  KeyMap_win.cpp  KeyMap_win.hpp  MainWindow_win.cpp  MainWindow_win.hpp  MenuBarUtilWin.cpp  MenuBarUtilWin.hpp  MenuBarUtil_win.cpp  MenuBarUtil_win.hpp  Platform_win.cpp  Platform_win.hpp  RasterContextWin.cpp  RasterContextWin.hpp  RasterContext_win.cpp  RasterContext_win.hpp  RasterPolicy_win.cpp  RasterPolicy_win.hpp  WinBackend.cpp  WinBackend.hpp  WinGLContext.cpp  WinGLContext.hpp  WinPlatform.cpp  WinPlatform.hpp  WinRasterContext.cpp  WindowHandleWin.cpp  WindowHandleWin.hpp  WindowHandle_win.cpp  WindowHandle_win.hpp
src/platform/win32/: Win32Backend.cpp  Win32GLContext.cpp  Win32RasterCanvas.cpp  Win32RasterContext.cpp  Win32Window.cpp
src/platform/winapi/: Window.cpp
src/util/: Align.cpp  Alignment.cpp  Clock.cpp  Color.cpp  ImmutableBuffer.cpp  Pixmap.cpp  Point.cpp  Position.cpp  Semaphore.cpp  Size.cpp  Texture.cpp  Time.cpp  color.cpp
src/widgets/: BoxLayout.cpp  Button.cpp  Cell.cpp  Checkbox.cpp  HBox.cpp  Image.cpp  Label.cpp  Rectangle.cpp  ScrollArea.cpp  ScrollBar.cpp  TextField.cpp  VBox.cpp  rectangle.cpp
tests/: AlignmentTest.cpp  CMakeLists.txt  CallbackStorageTest.cpp  ClockTest.cpp  ColorTest.cpp  ColorTypeTest.cpp  ContainerTest.cpp  ImmutableBufferTest.cpp  PixmapTest.cpp  PointTest.cpp  PositionTest.cpp  RectangleTest.cpp  SafeQueueTest.cpp  SemaphoreTest.cpp  ShapeTest.cpp  SizableTest.cpp  SizePolicyTest.cpp  SizeTest.cpp  Vec2Test.cpp  WidgetTest.cpp  color_tests.cpp  container_tests.cpp  rectangle_tests.cpp  shape_tests.cpp  transformable_tests.cpp  vec2_tests.cpp  widget_tests.cpp
tests/box_layout/: BoxLayoutTest.cpp  CMakeLists.txt
(+102 files in other folders)
